--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "author": "Firebase",
   "license": "MIT",
   "bin": {
-    "firebase-import": "node_modules/firebase-import/src/firebase-import.js"
+    "firebase-import": "src/firebase-import.js"
   },
   "scripts": {
     
